--- a/index.html
+++ b/index.html
@@ -63,22 +63,22 @@
             <div class="collapse navbar-collapse" id="obatin-nav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/index.html" class="nav-link">Home</a>
+                  <a href="https://dhingraaryan.github.io/ApniDukan/index.html" class="nav-link">Home</a>
                 </li>
                 </li>
                 <li class="nav-item">
                   <a href="#" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/products.html" class="nav-link">Product</a>
+                  <a href="https://dhingraaryan.github.io/ApniDukan/products.html" class="nav-link">Product</a>
                 </li>
               </ul>
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item pe-2">
-                 <a href="https://kartikthakur7107.github.io/Apnidukan/login/login.html"> <button class="btn btn-white">Sign Up</button></a>
+                 <a href="https://https://dhingraaryan.github.io/ApniDukan/login/login.html"> <button class="btn btn-white">Sign Up</button></a>
                 </li>
                 <li class="nav-item ps-2">
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/login/login.html"> <button class="btn btn-primary">Sign In</button></a>
+                  <a href="https://dhingraaryan.github.io/ApniDukan/login/login.html"> <button class="btn btn-primary">Sign In</button></a>
                 </li>
               </ul>
             </div>
