--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                   this area.
                 </p>
                 <div class="mt-5 btns-group">
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/login/login.html"><button class="me-2 btn btn-secondary">
+                  <a href="https://dhingraaryan.github.io/ApniDukan/login/login.html"><button class="me-2 btn btn-secondary">
                     Sign Up
                   </button></a>
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/products.html"><button class="ms-2 btn btn-white">
+                  <a href="https://https://dhingraaryan.github.io/ApniDukan/products.html"><button class="ms-2 btn btn-white">
                     Get Started <i class="fas fa-arrow-right"></i>
                   </button></a>
                 </div>
@@ -198,7 +198,7 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
                 <div class="row mb-5">
                   <div class="col-6">
                     <div class="p-3 card">
-                      <img src="https://kartikthakur7107.github.io/Apnidukan/Images/city.jpg"  style="margin-left: 20px;" alt="hospital-img">
+                      <img src="https://https://dhingraaryan.github.io/ApniDukan/Images/city.jpg"  style="margin-left: 20px;" alt="hospital-img">
                       <div class="card-body">
                         <h5 class="card-title text-dark">Amritsar</h5>
                         <p class="card-text"></p>
@@ -207,7 +207,7 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
                   </div>
                   <div class="col-6">
                     <div class="p-3 card">
-                      <img src="https://kartikthakur7107.github.io/Apnidukan/Images/city.jpg"  style="margin-left: 20px;"alt="hospital-img">
+                      <img src="https://https://dhingraaryan.github.io/ApniDukan//Images/city.jpg"  style="margin-left: 20px;"alt="hospital-img">
                       <div class="card-body">
                         <h5 class="card-title text-dark">Jalandhar</h5>
                         <p class="card-text"></p>
@@ -218,7 +218,7 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
                 <div class="row">
                   <div class="col-6">
                     <div class="p-3 card">
-                      <img src="https://kartikthakur7107.github.io/Apnidukan/Images/city.jpg"  style="margin-left: 20px;"alt="hospital-img">
+                      <img src="https://https://dhingraaryan.github.io/ApniDukan/Images/city.jpg"  style="margin-left: 20px;"alt="hospital-img">
                       <div class="card-body">
                         <h5 class="card-title text-dark" style="display: flex;">Chandigarh </h5>
                         <p class="card-text"></p>
@@ -227,7 +227,7 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
                   </div>
                   <div class="col-6">
                     <div class="p-3 card">
-                      <img src="https://kartikthakur7107.github.io/Apnidukan/Images/city.jpg"  style="margin-left: 20px;"alt="hospital-img">
+                      <img src="https://https://dhingraaryan.github.io/ApniDukan/Images/city.jpg"  style="margin-left: 20px;"alt="hospital-img">
                       <div class="card-body">
                         <h5 class="card-title text-dark">Ludhiana</h5>
                         <p class="card-text"></p>
@@ -268,10 +268,10 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
                   Preservaing the true love between the parents and children, Apni Dukan brings the one hour fast delivery..
                 </p>
                 <div class="mt-5 btns-group">
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/login/login.html"><button class="me-2 btn btn-secondary">
+                  <a href="https://https://dhingraaryan.github.io/ApniDukan/login/login.html"><button class="me-2 btn btn-secondary">
                     Sign In
                   </button></a>
-                  <a href="https://kartikthakur7107.github.io/Apnidukan/products.html"> <button class="ms-2 btn btn-white">
+                  <a href="https://https://dhingraaryan.github.io/ApniDukan/products.html"> <button class="ms-2 btn btn-white">
                     Products <i class="fas fa-arrow-right"></i>
                   </button></a>
                 </div>
@@ -326,8 +326,8 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
         </div>
         <div class="rules d-flex mt-5 justify-content-between align-items-center">
           <div class="terms d-flex">
-            <a href="https://kartikthakur7107.github.io/Apnidukan/privacy.html" class="text-white me-3">Terms & Conditions</a>
-            <a href="https://kartikthakur7107.github.io/Apnidukan/privacy.html" class="text-white ms-3">Privacy Policy</a>
+            <a href="https://https://dhingraaryan.github.io/ApniDukan/privacy.html" class="text-white me-3">Terms & Conditions</a>
+            <a href="https://https://dhingraaryan.github.io/ApniDukan/privacy.html" class="text-white ms-3">Privacy Policy</a>
           </div>
           <div class="social-icons d-flex">
             <a href="https://kartikthakur7107.github.io/Apnidukan/handles.html"><i class="text-white fab fa-2x fa-facebook-f"></i></a>
