--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </ul>
               <ul class="navbar-nav ms-auto">
                 <li class="nav-item pe-2">
-                 <a href="https://https://dhingraaryan.github.io/ApniDukan/login/login.html"> <button class="btn btn-white">Sign Up</button></a>
+                 <a href="https://dhingraaryan.github.io/ApniDukan/login/login.html"> <button class="btn btn-white">Sign Up</button></a>
                 </li>
                 <li class="nav-item ps-2">
                   <a href="https://dhingraaryan.github.io/ApniDukan/login/login.html"> <button class="btn btn-primary">Sign In</button></a>
@@ -326,7 +326,7 @@ Preservaing the true love between the parents and children, Apni Dukan brings th
         </div>
         <div class="rules d-flex mt-5 justify-content-between align-items-center">
           <div class="terms d-flex">
-            <a href="https://https://dhingraaryan.github.io/ApniDukan/privacy.html" class="text-white me-3">Terms & Conditions</a>
+            <a href="https://dhingraaryan.github.io/ApniDukan/privacy.html" class="text-white me-3">Terms & Conditions</a>
             <a href="https://dhingraaryan.github.io/ApniDukan/privacy.html" class="text-white ms-3">Privacy Policy</a>
           </div>
           <div class="social-icons d-flex">
